2005-09-25  Carol Spears  <carol@gimp.org>

	* plug-ins/common/max_rgb.c moved menu entry from Colors to
        Colors/Modify.

	* plug-ins/common/borderaverage.c moved menu entry from Colors to
        Colors/Info and added some vital information to the registration
        information.

	* plug-ins/common/channel_mixer.c moved menu entry from Colors to
        Colors/Modify.

	* plug-ins/common/colorify.c moved menu entry from Colors to
        Colors/Modify.

	* plug-ins/common/fp.c moved menu entry from Colors to
        Colors/Modify.

	* plug-ins/common/retinex.c moved menu entry from Colors to
        Colors/Modify.

2005-09-26  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/fade-outline.scm: renamed to
	"Fade to Layer Mask..." and moved to the Select menu.

2005-09-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/max_rgb.c: moved it back, the plug-in changes
	the image. Renamed to "Maximum RGB".

2005-09-25  Carol Spears  <carol@gimp.org>

	* plug-ins/common/max_rgb.c moved menu entry from Colors to
        Colors/Info.

	* plug-ins/common/smooth_palette.c moved menu entry from Colors to
        Colors/Info.

	* plug-ins/common/semiflatten.c removed menu entry from Colors and
        added it to Filters/Web

	* plug-ins/pygimp/plug-ins/py-slice.py added the patch from
        Joao S. O. Bueno Calligaris that was attached to bug #159564.

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/edit-actions.c
	* menus/image-menu.xml.in: added "Edit/Paste as" submenu and moved
	"Paste as new" there (renamed to "New Image").

	* plug-ins/script-fu/scripts/Makefile.am
	* plug-ins/script-fu/scripts/paste-as-brush.scm
	* plug-ins/script-fu/scripts/paste-as-pattern.scm: new scripts
	roughly derived from select-to-brush and select-to-pattern.

	* plug-ins/script-fu/scripts/select-to-brush.scm
	* plug-ins/script-fu/scripts/select-to-image.scm
	* plug-ins/script-fu/scripts/select-to-pattern.scm: don't register
	menu entries.
